v.1.4.6

- added armor tag to plate armors. Fixes error in plate armor generation (nearly all affixes require armor tag)
- added extra projectiles to spell datapack stat (unused currently, open to modpackers)
- added istargetally condition for spells

v.1.4.5

- fix crash when all but 1 spell trees are disabled with datapacks
- remove spell school selection buttons when there's only 1 school.
- fix adderstat not working
- fix adderstat tooltip

v.1.4.4

- updated station models by Catscythe
- repair station now works like the modify station, button click!
- repair values in repair station are now much cheaper for low level gear, slowly rising costs as lvl increases
- added repair kits. They are a way to repair gear on the run. So you dont have to bring a repair station. 
You power them the same way you powered the repair station before, by filling it with fuel items, though now it's done with crafting screen.
Then you combine repair kit with your gear, and it repairs it.

- add new datapack stat: "one applies to other". Used with my stat that adds spell damage based on heal power.
Yes that means you can do stuff like "20% of strength applies to intelligence" 
- dont sync mob stats to client. They seem to be unneded. This should improve performance. (the only thing that needs to be synced are mob affixes and statuses)
- fix status effects not showing particles
- turn off gem glint
- fix auto helmet compat

v 1.4.3
- fix recipes (they were excluded for some reason?)

v.1.4.2
- added new datapack feature: adding "enabled": false, to base of the json will make it so that json isn't registered. 
- updated chinese lang

v.1.4.1
- fix helmet boots

v.1.4.0

Added a "few" new unique gears:
- Snake eye
- Judgement
- Smell of Rot
- The Unfading
- Fifth Rider
- Harbinger
- Gluttony
- Crown of Ice
- Crown of Elements
- Origin of Arcane
- Gem of the North
- Worldbearer
- Solaris
- Lunaris
- Touch of Eternity
- Kingmaker
- Eternal Hunger

New runes:
- YUN

New runewords: