@@ -4,11 +4,13 @@ arrow_storm_damage
 spear_of_judgement_cooldown
 holy_flower_healing
 awaken_mana_healing
+thunder_strikes_cooldown
 holy_flower_projectile_speed
 bravery_healing
 thorn_bush_damage
 magma_flower_cast_speed
 purifying_fires_mana_cost
+thunder_strikes_mana_cost
 trickery_cast_speed
 fireball_damage
 imbue_damage
@@ -109,11 +111,13 @@ lightning_totem_healing
 tidal_wave_projectile_speed
 blizzard_cast_speed
 holy_flower_cleanse
+thunder_strikes_healing
 arrow_storm_cast_speed
 arcane_comet_cast_speed
 arcane_bolt_cooldown
 heart_of_ice_cooldown
 arrow_barrage_mana_cost
+thunder_strikes_projectile_speed
 poison_ball_cooldown
 poison_ball_cast_speed
 arrow_storm_healing
@@ -181,10 +185,12 @@ magic_bomb_projectile_speed
 throw_flames_mana_cost
 fire_bombs_projectile_speed
 magma_flower_cooldown
+thunder_strikes_cast_speed
 fire_bombs_damage
 healing_aura_projectile_speed
 heart_of_ice_damage
 thunder_dash_cast_speed
+thunder_strikes_damage
 recoil_shot_healing
 blazing_inferno_mana_cost
 wizardry_cast_speed
