@@ -7,6 +7,7 @@ poison_ball
 teleport
 thorn_armor
 throw_flames
+thunder_strikes
 passive_divine
 passive_hunting
 blazing_inferno
