@@ -1,5 +1,7 @@
 v.1.4.6
 
+- changed unique gear datapacks to not use item id for their lang name and desc keys. 
+Now follows same naming theme as my other datapacks: modid.type.identifier
 - added armor tag to plate armors. Fixes error in plate armor generation (nearly all affixes require armor tag)
 - added extra projectiles to spell datapack stat (unused currently, open to modpackers)
 - added istargetally condition for spells
